--- a/dev/markup.html
+++ b/dev/markup.html
@@ -4,8 +4,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <div class="markap__color-box">
-                    <h4 class="markap__title">1. colors</h4>
+                <div class="markup__color-box">
+                    <h4 class="markup__title">1. colors</h4>
                     <ul>
                         <li class="color-item color-item-1">
 
@@ -26,8 +26,8 @@
             </div>
 
             <div class="col-md-4">
-                <div class="markap__text-box">
-                    <h4 class="markap__title">2. Цвет текста, шрифт bold, шрифт italik, ссылка в тексте, ::selection
+                <div class="markup__text-box">
+                    <h4 class="markup__title">2. Цвет текста, шрифт bold, шрифт italik, ссылка в тексте, ::selection
                     </h4>
                     <p> <a href="#">totam nostrum?</a><b>Culpa tenetur perspiciatis quibusdam maxime
                             nostrum?</b><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</i> Praesentium,
@@ -39,8 +39,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="markap__ol-box">
-                    <h4 class="markap__title">3. Нумерованый список</h4>
+                <div class="markup__ol-box">
+                    <h4 class="markup__title">3. Нумерованый список</h4>
                     <ol>
                         <li>Lorem, ipsum dolor.</li>
                         <li>Lorem, ipsum dolor.</li>
@@ -51,8 +51,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="markap__ol-box">
-                    <h4 class="markap__title">4. Маркерованый список</h4>
+                <div class="markup__ol-box">
+                    <h4 class="markup__title">4. Маркерованый список</h4>
                     <ul>
                         <li>Lorem, ipsum dolor.</li>
                         <li>Lorem, ipsum dolor.</li>
@@ -64,8 +64,8 @@
             </div>
 
             <div class="col-md-4">
-                <div class="markap__ol-box">
-                    <h4 class="markap__title">5. Font-family</h4>
+                <div class="markup__ol-box">
+                    <h4 class="markup__title">5. Font-family</h4>
                     <ul>
                         <li>ProximaNova</li>
 
@@ -74,8 +74,8 @@
             </div>
 
             <div class="col-md-4">
-                <div class="markap__ol-box">
-                    <h4 class="markap__title">6. Font-weight</h4>
+                <div class="markup__ol-box">
+                    <h4 class="markup__title">6. Font-weight</h4>
                     <ul>
 
                         <li class="wf-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident
@@ -90,8 +90,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="markap__ol-box">
-                    <h4 class="markap__title">7. h1.....h6 titles </h4>
+                <div class="markup__ol-box">
+                    <h4 class="markup__title">7. h1.....h6 titles </h4>
                     <h1>Lorem, ipsum dolor.</h1>
                     <h2>Lorem, ipsum dolor.</h2>
                     <h3>Lorem, ipsum dolor.</h3>
@@ -101,8 +101,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="markap__ol-box">
-                    <h4 class="markap__title">8. style titles</h4>
+                <div class="markup__ol-box">
+                    <h4 class="markup__title">8. style titles</h4>
                     <div class="h1">Lorem, ipsum dolor.</div>
                     <div class="h2">Lorem, ipsum dolor.</div>
                     <div class="h3">Lorem, ipsum dolor.</div>
@@ -113,8 +113,8 @@
             </div>
 
             <div class="col-md-4">
-                <div class="markap__check-box">
-                    <h4 class="markap__title">9. checkbox, radiobutton</h4>
+                <div class="markup__check-box">
+                    <h4 class="markup__title">9. checkbox, radiobutton</h4>
                     <div class="check-button">
                         <input id="checkbox1" type="checkbox" checked name="terms">
                         <label for="checkbox1">Lorem, ipsum dolor.</label>
@@ -147,8 +147,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="markap__btn-box">
-                    <h4 class="markap__title">10. button</h4>
+                <div class="markup__btn-box">
+                    <h4 class="markup__title">10. button</h4>
                     <button type="button" class="btn btn-primary">Оставить заявку</button>
                     <button type="button" class="btn btn-secondary">Secondary</button>
                     <button type="button" class="btn btn-primary btn-lg">Оставить заявку</button>
@@ -162,8 +162,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="markap__scroll">
-                    <h4 class="markap__title">11. button</h4>
+                <div class="markup__scroll">
+                    <h4 class="markup__title">11. button</h4>
                     <div class="scroll">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi dolorum earum facilis alias
                         reprehenderit aliquid ab consequatur deserunt laudantium aliquam quia veniam necessitatibus
@@ -194,8 +194,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="markap__scroll">
-                    <h4 class="markap__title">12. Fancybox</h4>
+                <div class="markup__scroll">
+                    <h4 class="markup__title">12. Fancybox</h4>
                     <a href="https://c.files.bbci.co.uk/9017/production/_105278863_gettyimages-855098134.jpg"
                         data-fancybox="test" data-caption="Single image lorem lorem lorem"
                         style="width: 300px; display: block;">
